--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.config.import=optional:configserver:http://localhost:8012
+spring.config.import=configserver:http://localhost:8012
